[gd_scene load_steps=4 format=3 uid="uid://bvn8x7jh2q4kp"]

[ext_resource type="Script" path="res://scripts/core/GameStateManager.gd" id="1_0k8vh"]
[ext_resource type="Script" path="res://scripts/core/Player.gd" id="2_8j9kq"]
[ext_resource type="Script" path="res://tests/CoreSystemsTest.gd" id="3_test"]

[node name="CoreSystemsTest" type="Node2D"]
script = ExtResource("3_test")

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource("1_0k8vh")

[node name="TestPlayer" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)
script = ExtResource("2_8j9kq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestPlayer"]
shape = SubResource("RectangleShape2D_1x8vu")

[node name="Sprite2D" type="Sprite2D" parent="TestPlayer"]

[node name="TestUI" type="CanvasLayer" parent="."]

[node name="TestPanel" type="Panel" parent="TestUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TestLabel" type="Label" parent="TestUI/TestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
text = "Core Systems Test"
horizontal_alignment = 1
vertical_alignment = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1x8vu"]
size = Vector2(20, 30)